--- a/ddclient/map.jinja
+++ b/ddclient/map.jinja
@@ -1,11 +1,5 @@
 {% set ddclient = salt['grains.filter_by']({
-    'Debian': {
-        'package': 'ddclient',
-        'service': 'ddclient',
-        'config': '/etc/ddclient.conf',
-        'config_src': 'salt://ddclient/files/ddclient.conf',
-    },
-    'RedHat': {
+    'default': {
         'package': 'ddclient',
         'service': 'ddclient',
         'config': '/etc/ddclient.conf',
